--- a/khyeras/_dev/styles/khyeras_v1/template/partials/content_achievements.html
+++ b/khyeras/_dev/styles/khyeras_v1/template/partials/content_achievements.html
@@ -776,9 +776,9 @@
 
 {% for key, card in cards %}
 	{% set section_id = function.create_handle(key) %}
-	<section id="{{ section_id }}" class="page-content-section" data-quick-name="{{ key }}">
+	<section id="{{ section_id }}" class="page-content-section toggleable-section" data-quick-name="{{ key }}">
 		<h3>
-			<button class="toggle-button button-link" type="button" data-toggle-type="achievement" data-toggle-id="{{ loop.index0 }}" data-toggle-name="{{ key }}" data-toggle-state="true" data-toggle-mobile="false"></button> {{ key }}
+			<button class="toggle-button button-link" type="button" data-toggle-type="achievement" data-toggle-id="{{ loop.index }}" data-toggle-name="{{ key }}" data-toggle-state="true" data-toggle-mobile="false"><i class="icon icon-xl fa-angle-up menu-trigger"></i></button> {{ key }}
 		</h3>
 		<div class="card-grid">
 			{% for detail in card %}
