--- a/khyeras/styles/khyeras_v1/template/memberlist_view.html
+++ b/khyeras/styles/khyeras_v1/template/memberlist_view.html
@@ -14,7 +14,6 @@
 <h2 class="memberlist-title">{PAGE_TITLE}</h2>
 
 <form method="post" action="{S_PROFILE_ACTION}" id="viewprofile">
-
 	<!-- IF PROFILE_ACCOUNT_TYPE_VALUE == 'Character' -->
 		<div id="tabs" class="tabs profile-tabs sub-panels" role="tablist">
 			<ul>
@@ -30,228 +29,74 @@
 
 	<div class="panel bg1<!-- IF S_ONLINE --> online<!-- ENDIF --> profile-panel">
 		<div class="inner">
-			<dl class="left-box postprofile">
-				<dt class="<!-- IF RANK_TITLE or RANK_IMG -->has-profile-rank<!-- ELSE -->no-profile-rank<!-- ENDIF --> <!-- IF AVATAR_IMG -->has-avatar<!-- ELSE -->no-avatar<!-- ENDIF -->">
+			<section class="section-test">
+				<dl class="left-box postprofile">
+					<dt class="<!-- IF RANK_TITLE or RANK_IMG -->has-profile-rank<!-- ELSE -->no-profile-rank<!-- ENDIF --> <!-- IF AVATAR_IMG -->has-avatar<!-- ELSE -->no-avatar<!-- ENDIF -->">
+						<!-- IF AVATAR_IMG -->
+							<div class="avatar-container">
+								<div class="avatar">{AVATAR_IMG}</div>
+							</div>
+						<!-- ENDIF -->
+						<!-- EVENT memberlist_view_username_prepend -->
+						<!-- IF USER_COLOR --><span  class="username-coloured" style="color: {USER_COLOR};"><!-- ELSE --><span><!-- ENDIF -->{USERNAME}</span>
+						<!-- EVENT memberlist_view_username_append -->
+					</dt>
 					<!-- IF AVATAR_IMG -->
-						<div class="avatar-container">
-							<div class="avatar">{AVATAR_IMG}</div>
-						</div>
-					<!-- ENDIF -->
-					<!-- EVENT memberlist_view_username_prepend -->
-					<!-- IF USER_COLOR --><span  class="username-coloured" style="color: {USER_COLOR};"><!-- ELSE --><span><!-- ENDIF -->{USERNAME}</span>
-					<!-- EVENT memberlist_view_username_append -->
-				</dt>
-				<!-- IF AVATAR_IMG -->
-					<!-- EVENT memberlist_view_rank_avatar_before -->
-				<!-- ELSE -->
-					<!-- EVENT memberlist_view_rank_no_avatar_before -->
-				<!-- ENDIF -->
-				<!-- IF RANK_TITLE or RANK_IMG or S_PROFILE_TITLE -->
-					<dd class="profile-rank">
-						<!-- IF RANK_TITLE or RANK_IMG -->
-							<div class="rank-label">{RANK_TITLE}</div>
-							<!-- IF RANK_IMG -->
-								<div class="rank-image">{RANK_IMG}</div>
-							<!-- ENDIF -->
-						<!-- ENDIF -->
-						<!-- IF S_PROFILE_TITLE -->
-							<div class="title-label">{PROFILE_TITLE_VALUE}</div>
-						<!-- ENDIF -->
-					</dd>
-				<!-- ENDIF -->
-				<!-- IF AVATAR_IMG -->
-					<!-- EVENT memberlist_view_rank_avatar_after -->
-				<!-- ELSE -->
-					<!-- EVENT memberlist_view_rank_no_avatar_after -->
-				<!-- ENDIF -->
-				<!-- IF U_EDIT_SELF or U_USER_ADMIN or U_USER_BAN or U_SWITCH_PERMISSIONS -->
-					<dd class="profile-permissions">
-						<!-- IF U_EDIT_SELF --> [ <a href="{U_EDIT_SELF}">{L_EDIT_PROFILE}</a> ]<!-- ENDIF -->
-						<!-- IF U_USER_ADMIN --> [ <a href="{U_USER_ADMIN}">{L_USER_ADMIN}</a> ]<!-- ENDIF -->
-						<!-- IF U_USER_BAN --> [ <a href="{U_USER_BAN}">{L_USER_BAN}</a> ]<!-- ENDIF -->
-						<!-- IF U_SWITCH_PERMISSIONS --> [ <a href="{U_SWITCH_PERMISSIONS}">{L_USE_PERMISSIONS}</a> ]<!-- ENDIF -->
-					</dd>
-				<!-- ENDIF -->
-			</dl>
-			<!-- IF PROFILE_ACCOUNT_TYPE_VALUE == 'Character' -->
-				<!-- INCLUDE partials/memberlist_character_details.html -->
-			<!-- ENDIF -->
-			<dl class="left-box details profile-details{% if writer_class %} {{ writer_class }}{% endif %}">
-				<!-- EVENT memberlist_view_zebra_before -->
-				<!-- IF S_USER_LOGGED_IN and S_ZEBRA -->
-					<dt>Alliance{L_COLON}</dt>
-					<!-- IF U_REMOVE_FRIEND -->
-						 <dd class="zebra">
-							 <a href="{U_REMOVE_FRIEND}" data-ajax="zebra">
-								 <i class="icon rpg-icon rpg-shaking-hands"></i>{L_REMOVE_FRIEND}
-							 </a>
-						 </dd>
-					<!-- ELSEIF U_REMOVE_FOE -->
-						<dd class="zebra">
-							<a href="{U_REMOVE_FOE}" data-ajax="zebra">
-								<i class="icon rpg-icon rpg-evil-hand"></i>{L_REMOVE_FOE}
-							</a>
-						</dd>
+						<!-- EVENT memberlist_view_rank_avatar_before -->
 					<!-- ELSE -->
-						<dd class="zebra">
-							<!-- IF U_ADD_FRIEND -->
-								<a href="{U_ADD_FRIEND}" data-ajax="zebra">
-									<i class="icon rpg-icon rpg-shaking-hands"></i>{L_ADD_FRIEND}
-								</a>
+						<!-- EVENT memberlist_view_rank_no_avatar_before -->
+					<!-- ENDIF -->
+					<!-- IF RANK_TITLE or RANK_IMG or PROFILE_TITLE_VALUE -->
+						<dd class="profile-rank">
+							<!-- IF RANK_TITLE or RANK_IMG -->
+								<div class="rank-label">{RANK_TITLE}</div>
+								<!-- IF RANK_IMG -->
+									<div class="rank-image">{RANK_IMG}</div>
+								<!-- ENDIF -->
 							<!-- ENDIF -->
-							<!-- IF U_ADD_FOE -->
-								<span class="bullet">&bull;</span>
-								<a href="{U_ADD_FOE}" data-ajax="zebra">
-									<i class="icon rpg-icon rpg-evil-hand"></i>{L_ADD_FOE}
-								</a>
+							<!-- IF PROFILE_TITLE_VALUE -->
+								<div class="title-label">{PROFILE_TITLE_VALUE}</div>
 							<!-- ENDIF -->
 						</dd>
 					<!-- ENDIF -->
-				<!-- ENDIF -->
-				<!-- EVENT memberlist_view_zebra_after -->
-				<!-- IF S_USER_INACTIVE -->
-					<dt>{L_USER_IS_INACTIVE}{L_COLON}</dt>
-					<dd>{USER_INACTIVE_REASON}</dd>
-				<!-- ENDIF -->
-				<!-- EVENT memberlist_view_non_contact_custom_fields_before -->
+					<!-- IF AVATAR_IMG -->
+						<!-- EVENT memberlist_view_rank_avatar_after -->
+					<!-- ELSE -->
+						<!-- EVENT memberlist_view_rank_no_avatar_after -->
+					<!-- ENDIF -->
+					<!-- IF U_EDIT_SELF or U_USER_ADMIN or U_USER_BAN or U_SWITCH_PERMISSIONS -->
+						<dd class="profile-permissions">
+							<!-- IF U_EDIT_SELF --> [ <a href="{U_EDIT_SELF}">{L_EDIT_PROFILE}</a> ]<!-- ENDIF -->
+							<!-- IF U_USER_ADMIN --> [ <a href="{U_USER_ADMIN}">{L_USER_ADMIN}</a> ]<!-- ENDIF -->
+							<!-- IF U_USER_BAN --> [ <a href="{U_USER_BAN}">{L_USER_BAN}</a> ]<!-- ENDIF -->
+							<!-- IF U_SWITCH_PERMISSIONS --> [ <a href="{U_SWITCH_PERMISSIONS}">{L_USE_PERMISSIONS}</a> ]<!-- ENDIF -->
+						</dd>
+					<!-- ENDIF -->
+				</dl>
+
 				<!-- INCLUDE partials/memberlist_writer_details.html -->
-				<!-- EVENT memberlist_view_non_contact_custom_fields_after -->
-				<!-- IF S_GROUP_OPTIONS -->
-					<dt>{L_USERGROUPS}{L_COLON}</dt>
-					<dd class="group-options"><select name="g">{S_GROUP_OPTIONS}</select> <input type="submit" name="submit" value="{L_GO}" class="button2" /></dd>
+
+				<!-- IF PROFILE_ACCOUNT_TYPE_VALUE == 'Character' -->
+					<!-- INCLUDE partials/memberlist_character_details.html -->
 				<!-- ENDIF -->
-			</dl>
+			</section>
+
+			<!-- INCLUDE partials/memberlist_writer_desc.html -->
+
+			<!-- IF PROFILE_ACCOUNT_TYPE_VALUE == 'Character' -->
+				<!-- INCLUDE partials/memberlist_character_desc.html -->
+			<!-- ENDIF -->
 		</div>
 	</div>
 
-	<!-- IF PROFILE_ACCOUNT_TYPE_VALUE == 'Character' -->
-		<!-- INCLUDE partials/memberlist_character_desc.html -->
-	<!-- ENDIF -->
-
-	<!-- EVENT memberlist_view_contact_before -->
-	{% if writer_class %}
-		<div class="{{ writer_class }}" role="tabpanel">
-	{% endif %}
-		<!-- IF (S_PROFILE_WRITING_PREFS or S_PROFILE_CHARACTER_LIST) and not S_PROFILE_C_WRITER_NAME -->
-			<div class="panel bg2">
-				<div class="inner">
-					<!-- IF S_PROFILE_WRITING_PREFS and S_PROFILE_CHARACTER_LIST -->
-						<div class="column1">
-					<!-- ENDIF -->
-						<!-- IF S_PROFILE_WRITING_PREFS -->
-							<h3>{PROFILE_WRITING_PREFS_NAME}</h3>
-							<p>{PROFILE_WRITING_PREFS_VALUE}</p>
-						<!-- ENDIF -->
-					<!-- IF S_PROFILE_WRITING_PREFS and S_PROFILE_CHARACTER_LIST -->
-						</div>
-						<div class="column2">
-					<!-- ENDIF -->
-						<!-- IF S_PROFILE_CHARACTER_LIST -->
-							<h3>{PROFILE_CHARACTER_LIST_NAME}</h3>
-							<p>{PROFILE_CHARACTER_LIST_VALUE}</p>
-						<!-- ENDIF -->
-					<!-- IF S_PROFILE_WRITING_PREFS and S_PROFILE_CHARACTER_LIST -->
-						</div>
-					<!-- ENDIF -->
-				</div>
-			</div>
-		<!-- ENDIF -->
-		<div class="panel bg2">
-			<div class="inner">
-				<!-- EVENT memberlist_view_content_prepend -->
-				<!-- IF not S_PROFILE_C_WRITER_NAME -->
-					<div class="user-contact">
-						<h3>{L_CONTACT_USER}</h3>
-						<div class="contact-icons">
-							<!-- IF U_EMAIL -->
-								<a href="{U_EMAIL}" title="{L_SEND_EMAIL_USER}">
-									<span class="contact-icon email-icon">{L_SEND_EMAIL_USER}</span>
-								</a>
-							<!-- ENDIF -->
-							<!-- IF U_PM -->
-								<a href="{U_PM}" title="{L_SEND_PRIVATE_MESSAGE}">
-									<span class="contact-icon pm-icon">{L_SEND_PRIVATE_MESSAGE}</span>
-								</a>
-							<!-- ENDIF -->
-							<!-- IF U_JABBER and S_JABBER_ENABLED -->
-								<a href="{U_JABBER}" onclick="popup(this.href, 750, 320); return false;" title="{L_SEND_JABBER_MESSAGE}">
-									<span class="contact-icon jabber-icon">{L_SEND_JABBER_MESSAGE}</span>
-								</a>
-							<!-- ENDIF -->
-							<!-- BEGIN custom_fields -->
-								<!-- IF custom_fields.S_PROFILE_CONTACT and custom_fields.PROFILE_FIELD_CONTACT -->
-									<a href="{custom_fields.PROFILE_FIELD_CONTACT}" title="{custom_fields.PROFILE_FIELD_DESC}">
-										<span class="contact-icon {custom_fields.PROFILE_FIELD_IDENT}-icon">{custom_fields.PROFILE_FIELD_DESC}</span>
-									</a>
-								<!-- ENDIF -->
-							<!-- END custom_fields -->
-						</div>
-						<dl class="details">
-							<!-- IF USER_JABBER -->
-								<dt>{L_JABBER}{L_COLON}</dt>
-								<dd>{USER_JABBER}</dd>
-							<!-- ENDIF -->
-							<!-- EVENT memberlist_view_contact_custom_fields_before -->
-							<!-- BEGIN custom_fields -->
-								<!-- IF custom_fields.S_PROFILE_CONTACT and not custom_fields.PROFILE_FIELD_CONTACT -->
-									<dt>{custom_fields.PROFILE_FIELD_NAME}{L_COLON}</dt>
-									<dd>{custom_fields.PROFILE_FIELD_VALUE}</dd>
-								<!-- ENDIF -->
-							<!-- END custom_fields -->
-							<!-- EVENT memberlist_view_contact_custom_fields_after -->
-						</dl>
-					</div>
-				<!-- ENDIF -->
-				<div class="user-stats">
-					<h3>{L_USER_FORUM}</h3>
-					<dl class="details">
-						<!-- EVENT memberlist_view_user_statistics_before -->
-						<dt>{L_JOINED}{L_COLON}</dt>
-						<dd>{JOINED}</dd>
-						<dt>{L_LAST_ACTIVE}{L_COLON}</dt>
-						<dd>{LAST_ACTIVE}</dd>
-						<!-- IF S_WARNINGS -->
-							<dt>{L_WARNINGS}{L_COLON} </dt>
-							<dd>
-								<strong>{WARNINGS}</strong>
-								<!-- IF U_NOTES or U_WARN --> [ <!-- IF U_NOTES --><a href="{U_NOTES}">{L_VIEW_NOTES}</a><!-- ENDIF --> <!-- IF U_WARN --><!-- IF U_NOTES --> | <!-- ENDIF --><a href="{U_WARN}">{L_WARN_USER}</a><!-- ENDIF --> ]<!-- ENDIF -->
-							</dd>
-						<!-- ENDIF -->
-						<dt>{L_TOTAL_POSTS}{L_COLON}</dt>
-						<dd>
-							{POSTS} <!-- IF S_DISPLAY_SEARCH -->| <strong><a href="{U_SEARCH_USER}">{L_SEARCH_USER_POSTS}</a></strong><!-- ENDIF -->
-							<!-- IF POSTS_PCT --><br />({POSTS_PCT} / {POSTS_DAY})<!-- ENDIF -->
-							<!-- IF POSTS_IN_QUEUE and U_MCP_QUEUE --><br />&nbsp;(<a href="{U_MCP_QUEUE}">{L_POSTS_IN_QUEUE}</a>)<!-- ELSEIF POSTS_IN_QUEUE --><br />&nbsp;({L_POSTS_IN_QUEUE})<!-- ENDIF -->
-						</dd>
-						<!-- IF S_SHOW_ACTIVITY and POSTS -->
-							<dt>{L_ACTIVE_IN_FORUM}{L_COLON}</dt>
-							<dd><!-- IF ACTIVE_FORUM != '' --><strong><a href="{U_ACTIVE_FORUM}">{ACTIVE_FORUM}</a></strong><br />({ACTIVE_FORUM_POSTS} / {ACTIVE_FORUM_PCT})<!-- ELSE --> - <!-- ENDIF --></dd>
-							<dt>{L_ACTIVE_IN_TOPIC}{L_COLON}</dt>
-							<dd><!-- IF ACTIVE_TOPIC != '' --><strong><a href="{U_ACTIVE_TOPIC}">{ACTIVE_TOPIC}</a></strong><br />({ACTIVE_TOPIC_POSTS} / {ACTIVE_TOPIC_PCT})<!-- ELSE --> - <!-- ENDIF --></dd>
-						<!-- ENDIF -->
-						<!-- EVENT memberlist_view_user_statistics_after -->
-					</dl>
-				</div>
-				<div class="extra-details">
-					<!-- EVENT memberlist_view_content_append -->
-				</div>
-			</div>
-		</div>
-	{% if writer_class %}
-		</div>
-	{% endif %}
-
-	<!-- EVENT memberlist_view_contact_after -->
-
 	<!-- IF SIGNATURE -->
-		<div class="panel bg1">
+		<div class="panel bg2">
 			<div class="inner">
 				<h3>{L_SIGNATURE}</h3>
 				<div class="postbody"><div class="signature standalone">{SIGNATURE}</div></div>
 			</div>
 		</div>
 	<!-- ENDIF -->
-
 </form>
 
 <!-- INCLUDE jumpbox.html -->
