--- a/khyeras/styles/khyeras_v1/template/utilities/macros.html
+++ b/khyeras/styles/khyeras_v1/template/utilities/macros.html
@@ -2,6 +2,17 @@
 	{{ value | replace({'"' : '', '\'' : '', '(' : '', ')' : '', ',' : '', '!' : '', ' ' : '-'}) | lower }}
 {% endspaceless %}{% endmacro %}
 
+{% macro create_details(details) %}
+	<dl class="details">
+		{% for name, value in details %}
+			{% if value %}
+				<dt>{{ name }}{{ lang('COLON') }}</dt>
+				<dd>{{ value }}</dd>
+			{% endif %}
+		{% endfor %}
+	</dl>
+{% endmacro %}
+
 {% macro create_nav_main(url, label, children) %}
 	<div class="menu-label">
 		<a href="{{ url }}" title="{{ label }}" role="menuitem"><span>{{ label }}</span></a>
@@ -16,6 +27,41 @@
 		<a href="{{ url }}" title="{{ label }}" role="menuitem"{% if label == 'Logout' %}  accesskey="x"{% endif %}><span>{{ label }}</span></a>
 	</li>
 {% endmacro %}
+
+{% macro create_pie_chart(title, type, data, total) %}
+	{% if data %}
+		{% set previous_value = 0 %}
+		<div class="pie-chart pie-chart-{{ type }} flex-column">
+			<div class="pie-chart-circle">
+				<div class="pie-chart-circle-wrapper">
+					<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 32" preserveAspectRatio="xMinYMid">
+						{% for key, value in data %}
+							{% if loop.index0 != 0 %}
+								{% set previous_value = previous_value + percentage %}
+							{% endif %}
+							{% set percentage = ((100 / total) * value) | round(1, 'ceil') %}
+							<circle class="pie-chart-slice pie-chart-slice-{{ loop.index0 }}" r="16" cx="16" cy="16" stroke-dashoffset="-{{ previous_value }}" stroke-dasharray="{{ percentage }} 100" data-circle-name="{{ key }}" />
+						{% endfor %}
+					</svg>
+				</div>
+			</div>
+			<h5 class="pie-chart-title">{{ title }}</h5>
+			<div class="pie-chart-key">
+				<ul>
+					{% for key, value in data %}
+						<li>
+							<span class="pie-chart-key-color pie-chart-key-color-{{ loop.index0 }}"></span><strong>{{ key }}:</strong> {{ value }}
+						</li>
+					{% endfor %}
+				</ul>
+			</div>
+		</div>
+	{% endif %}
+{% endmacro %}
+
+{% macro create_title(title, khy_data) %}{% spaceless %}
+	{% if khy_data.self %}{{ khy_data.name }}{% else %}{{ title }}{% endif %}
+{% endspaceless %}{% endmacro %}
 
 {% macro display_avatar(avatar, theme_path) %}
 	<div class="user-avatar">
@@ -86,37 +132,6 @@
 	{% endif %}
 {% endmacro %}
 
-{% macro create_pie_chart(title, type, data, total) %}
-	{% if data %}
-		{% set previous_value = 0 %}
-		<div class="pie-chart pie-chart-{{ type }} flex-column">
-			<div class="pie-chart-circle">
-				<div class="pie-chart-circle-wrapper">
-					<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 32" preserveAspectRatio="xMinYMid">
-						{% for key, value in data %}
-							{% if loop.index0 != 0 %}
-								{% set previous_value = previous_value + percentage %}
-							{% endif %}
-							{% set percentage = ((100 / total) * value) | round(1, 'ceil') %}
-							<circle class="pie-chart-slice pie-chart-slice-{{ loop.index0 }}" r="16" cx="16" cy="16" stroke-dashoffset="-{{ previous_value }}" stroke-dasharray="{{ percentage }} 100" data-circle-name="{{ key }}" />
-						{% endfor %}
-					</svg>
-				</div>
-			</div>
-			<h5 class="pie-chart-title">{{ title }}</h5>
-			<div class="pie-chart-key">
-				<ul>
-					{% for key, value in data %}
-						<li>
-							<span class="pie-chart-key-color pie-chart-key-color-{{ loop.index0 }}"></span><strong>{{ key }}:</strong> {{ value }}
-						</li>
-					{% endfor %}
-				</ul>
-			</div>
-		</div>
-	{% endif %}
+{% macro replace_breaks(value) %}
+	{{ value | spaceless | replace({'<br><br>': '<\/p><p>'}) }}
 {% endmacro %}
-
-{% macro create_title(title, khy_data) %}{% spaceless %}
-	{% if khy_data.self %}{{ khy_data.name }}{% else %}{{ title }}{% endif %}
-{% endspaceless %}{% endmacro %}
