--- a/khyeras/_dev/styles/khyeras_v1/template/partials/memberlist_character_details.html
+++ b/khyeras/_dev/styles/khyeras_v1/template/partials/memberlist_character_details.html
@@ -1,7 +1,9 @@
-<dl class="left-box details profile-details {{ character_class }}">
-	<dd class="character-card details-full">
-		{{ function.display_level(KHY_MEMBER_LEVEL, 'false') }}
-		{{ function.display_stats(KHY_MEMBER_STATS.hp, KHY_MEMBER_STATS.mp, PROFILE_C_HP_VALUE, PROFILE_C_MP_VALUE, 'false') }}
+<dl class="details {{ character_class }}">
+	<dd class="details-full">
+		<div class="character-card">
+			{{ function.display_level(KHY_MEMBER_LEVEL, 'false') }}
+			{{ function.display_stats(KHY_MEMBER_STATS.hp, KHY_MEMBER_STATS.mp, PROFILE_C_HP_VALUE, PROFILE_C_MP_VALUE, 'false') }}
+		</div>
 	</dd>
 
 	{% set character_fields = {
