--- a/khyeras/_dev/styles/khyeras_v1/theme/sass/imports/_profile.scss
+++ b/khyeras/_dev/styles/khyeras_v1/theme/sass/imports/_profile.scss
@@ -1,18 +1,11 @@
 /* Profile - View Topic, PM, Memberlist View
-   Note: More specific styling like layout sizing is located in their specific sections
 ============================================== */
 
 .postprofile {
-	border-right: 1px dashed $color-01;
-	dt, .profile-rank, .profile-permissions {
-		text-align: center;
+	dt, dd {
+		margin: 0 0 5px 0;
 	}
-	dt {
-		& > strong {
-			font-weight: normal;
-		}
-		text-align: center;
-		margin: 0 0 10px 0;
+ 	dt {
 		a, span {
 			&[class*='username'] {
 				display: block;
@@ -24,19 +17,12 @@
 			margin: 0 0 10px 0;
 		}
 	}
-	dd {
-		margin: 0 0 3px 0;
-	}
 	.profile-rank {
 		font-family: $font-02;
 		font-style: italic;
-		margin: 10px 0;
-		div ~ div {
+		.rank-label ~ .title-label {
 			margin: 5px 0 0 0;
 		}
-	}
-	.profile-permissions {
-		font-size: rem(12px);
 	}
 }
 
@@ -107,10 +93,6 @@
 	&.stats-small .stat-bar {
 		height: 16px;
 	}
-}
-
-#viewprofile .stats .stat-bar {
-	max-width: 50%;
 }
 
 /* Character Card
@@ -190,39 +172,39 @@
 .online .postprofile dt.no-avatar {
 	margin-top: 30px;
 }
-
-.section-viewtopic .post.online {
-	&:before, &:after {
-		left: -12px;
-	}
-	&:before {
-		top: 20px;
-	}
-	&:after {
-		top: 44px;
-	}
-}
-
-.pm.post.online {
-	&:before, &:after {
-		left: -12px;
-	}
-	&:before {
-		top: 15px;
-	}
-	&:after {
-		top: 39px;
-	}
-}
-
-#viewprofile .panel.online {
-	&:before, &:after {
-		left: -11px;
-	}
-	&:before {
-		top: 15px;
-	}
-	&:after {
-		top: 39px;
-	}
-}
+//
+// .section-viewtopic .post.online {
+// 	&:before, &:after {
+// 		left: -12px;
+// 	}
+// 	&:before {
+// 		top: 20px;
+// 	}
+// 	&:after {
+// 		top: 44px;
+// 	}
+// }
+//
+// .pm.post.online {
+// 	&:before, &:after {
+// 		left: -12px;
+// 	}
+// 	&:before {
+// 		top: 15px;
+// 	}
+// 	&:after {
+// 		top: 39px;
+// 	}
+// }
+//
+// #viewprofile .panel.online {
+// 	&:before, &:after {
+// 		left: -11px;
+// 	}
+// 	&:before {
+// 		top: 15px;
+// 	}
+// 	&:after {
+// 		top: 39px;
+// 	}
+// }
