--- a/khyeras/_dev/styles/khyeras_v1/theme/sass/imports/_viewtopic.scss
+++ b/khyeras/_dev/styles/khyeras_v1/theme/sass/imports/_viewtopic.scss
@@ -418,6 +418,7 @@ fieldset.polls dl .poll_option_select, #preview fieldset.polls dl dd {
 ============================================== */
 
 .post .postprofile {
+	border-right: 1px dashed $color-01;
 	.profile-contact {
 		position: relative;
 		.dropdown-container {
@@ -432,8 +433,7 @@ fieldset.polls dl .poll_option_select, #preview fieldset.polls dl dd {
 		}
 	}
 	.profile-character-wrapper {
-		margin-top: 20px;
-		margin-bottom: 20px;
+		margin: 20px 0;
 		padding: 15px 0 10px 0;
 		border-top: 1px dashed $color-01;
 		border-bottom: 1px dashed $color-01;
@@ -458,6 +458,18 @@ fieldset.polls dl .poll_option_select, #preview fieldset.polls dl dd {
 		flex: 0 0 231px;
 		margin: 0 20px 0 0;
 		padding: 0 20px 0 0;
+		dt, .profile-rank, .profile-permissions {
+			text-align: center;
+		}
+		dt {
+			margin: 0 0 10px 0;
+			& > strong {
+				font-weight: normal;
+			}
+		}
+		.profile-rank {
+			margin: 10px 0;
+		}
 	}
 	.postbody {
 		@include flex(base);
